@@ -783,6 +783,33 @@ literal|"ivy.test.variable"
 argument_list|)
 argument_list|)
 expr_stmt|;
+name|assertEquals
+argument_list|(
+name|configure
+operator|.
+name|getIvyInstance
+argument_list|()
+operator|.
+name|getSettings
+argument_list|()
+operator|.
+name|getDefaultCache
+argument_list|()
+operator|.
+name|getAbsolutePath
+argument_list|()
+argument_list|,
+name|configure
+operator|.
+name|getProject
+argument_list|()
+operator|.
+name|getProperty
+argument_list|(
+literal|"ivy.cache.dir"
+argument_list|)
+argument_list|)
+expr_stmt|;
 block|}
 specifier|public
 name|void
